--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <center>
 <p><h2>Hacktober List</h2></p>
 <!---- FORMAT: <p><a href="YOUR-WEBSITE">USERNAME</a></p>
-
+<p><a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
 </center>
 </body>
