--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <center>
 <p><h2>Hacktober List</h2></p>
-<!---- FORMAT: <p><a href="YOUR-WEBSITE">USERNAME</a></p>
+<!---- FORMAT: <p><a href="YOUR-WEBSITE">USERNAME</a></p> ----->
 <p><a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
 </center>
 </body>
