added name to list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
 <center>
 <p><h2>Hacktober List</h2></p>
+<p><a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
 <!---- FORMAT: <p><a href="YOUR-WEBSITE">USERNAME</a></p>
 
 </center>
