--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <head>
 <title>Hacktober List</title>
-<link rel="stylesheet" href="http://cdn.flareco.net/bootswatch/superhero/bootstrap.css"/>
+<link rel="stylesheet" href="https://cdn.flareco.net/bootswatch/superhero/bootstrap.css"/>
+<link rel="stylesheet" href="https://cdn.flareco.net/font-awesome/css/font-awesome.css"/>
 </head>
 <body>
+<div class="conatiner-fluid">
 <center>
-<p><h2>Hacktober List</h2></p>
-<p><a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
-<!---- FORMAT: <p><a href="YOUR-WEBSITE">USERNAME</a></p> ---->
-<p><a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
+  <p class="alert alert-success"><h2>Hacktober List 2017</h2></p>
+ <!---- FORMAT: <p><i class="fa fa-user"></i> <a href="YOUR-WEBSITE">USERNAME</a></p> ---->
+  <p><i class="fa fa-user"></i> <a href="https://github.com/FlareNetwork">FlareCO</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
 </center>
+</div>
 </body>
