Add yeshi Dorjee in Hacktober List

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p><i class="fa fa-user"></i> <a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/sinhaHarshit">sinhaHarshit</a></p>
+ <p><i class="fa fa-user"></i> <a href="https://github.com/yeshijinsel">Yeshijinsel</a></p>
 </center>
 </div>
 </body>
