--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/sinhaHarshit">sinhaHarshit</a></p>
  <p><i class="fa fa-user"></i> <a href="https://github.com/yeshijinsel">Yeshijinsel</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/ipie4fun">ipie4fun</a></p>
 </center>
 </div>
 </body>
