--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/FlareNetwork">FlareCO</a></p>
   <p><i class="fa fa-user"></i> <a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/pBuddhi">Buddhi Prakash</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/rahulrautela">rahulrautela</a></p>
 </center>
 </div>
 </body>
