--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/sinhaHarshit">sinhaHarshit</a></p>
  <p><i class="fa fa-user"></i> <a href="https://github.com/yeshijinsel">Yeshijinsel</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/ipie4fun">ipie4fun</a></p>
+   <p><i class="fa fa-user"></i> <a href="https://github.com/ipie4fun">eliWave</a></p>
 </center>
 </div>
 </body>
