--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <link rel="stylesheet" href="https://cdn.flareco.net/bootswatch/superhero/bootstrap.css"/>
 <link rel="stylesheet" href="https://cdn.flareco.net/font-awesome/css/font-awesome.css"/>
 </head>
+<style>
+.ophosting {
+  position:absolute;
+  top:0;
+  right:0;
+}
+</style>
 <body>
+<a href="https://www.ophosting.io" class="ophosting"><img src="https://www.ophosting.io/img/newLogo.png"></a>
 <div class="conatiner-fluid">
 <center>
   <p class="alert alert-success"><h2>Hacktober List 2017</h2></p>
