--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/eliWave">eliWave</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/Petro36">Petro36</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/jjcc1421">Juan Caicedo</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
 </center>
 </div>
 </body>
