--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <a href="https://www.ophosting.io" class="ophosting"><img src="https://www.ophosting.io/img/newLogo.png"></a>
 <div class="conatiner-fluid">
+<p class="alert alert-success"><h2>Hacktober List 2017</h2></p>
 <center>
-  <p class="alert alert-success"><h2>Hacktober List 2017</h2></p>
  <!---- FORMAT: <p><i class="fa fa-user"></i> <a href="YOUR-WEBSITE">USERNAME</a></p> ---->
   <p><i class="fa fa-user"></i> <a href="https://github.com/FlareNetwork">FlareCO</a></p>
   <p><i class="fa fa-user"></i> <a href="https://jobwelldone.herokuapp.com">torrance.jr</a></p>
@@ -25,7 +25,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/ipie4fun">ipie4fun</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/parkerduckworth">ParkerDuckworth</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/mb180594b">mb180594b</a></p>
-  <p><i class="fa fa-user"></i> <a href="YOUR-WEBSITE">matteo-g</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/matteo-g">matteo-g</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/marinalans">marinalans</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/eliWave">eliWave</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/Petro36">Petro36</a></p>
