Add my name to index

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/jjcc1421">Juan Caicedo</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/aakankshaprasad">Aakanksha Prasad</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/jameskingdom">James Kingdom</a></p>
 </div>
 </body>
