--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <p><i class="fa fa-user"></i> <a href="https://github.com/jjcc1421">Juan Caicedo</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/aakankshaprasad">Aakanksha Prasad</a></p>
   <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
+  <p><i class="fa fa-user"></i> <a href="https://github.com/k4vglitcher">k4vglitcher</a></p>
 </center>
 </div>
 </body>
