Added name to the Hacktober list

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/Petro36">Petro36</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/jjcc1421">Juan Caicedo</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/aakankshaprasad">Aakanksha Prasad</a></p>
-			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p> 
+			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
+        <p><i class="fa fa-user"></i> <a href="https://github.com/daphnied">Daphnie Donnell</a></p>
 			</div>
 			<div class="panel panel-footer">
 				<center>&copy; OPHosting Inc. 2017</center>
@@ -56,7 +57,7 @@
 				<p><i class="fa fa-user"></i> <a href="https://github.com/Amykw105">Amykw105</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/jameskingdom">James Kingdom</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/k4vglitcher">k4vglitcher</a></p>
-				
+
 			</div>
 			<div class="panel panel-footer">
 				<center>&copy; OPHosting Inc. 2017</center>
@@ -70,7 +71,7 @@
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
-				
+
 			</div>
 			<div class="panel panel-footer">
 				<center>&copy; OPHosting Inc. 2017</center>
