--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/jjcc1421">Juan Caicedo</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/aakankshaprasad">Aakanksha Prasad</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p> 
+			  <p><i class="fa fa-user"></i> <a href="https://github.com/hoffmanjoshua">hoffmanjoshua</a></p>
 			</div>
 			<div class="panel panel-footer">
 				<center>&copy; OPHosting Inc. 2017</center>
