--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 				<p><i class="fa fa-user"></i> <a href="https://github.com/Amykw105">Amykw105</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/jameskingdom">James Kingdom</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/k4vglitcher">k4vglitcher</a></p>
+				<p><i class="fa fa-user"></i> <a href="https://github.com/brandonbrewer93">Brandon Brewer</a></p>
 				
 			</div>
 			<div class="panel panel-footer">
