--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/aakankshaprasad">Aakanksha Prasad</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p> 
+			  <p><i class="fa fa-user"></i> <a href="https://github.com/Arrowfan">Arrowfan</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/hoffmanjoshua">hoffmanjoshua</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
         <p><i class="fa fa-user"></i> <a href="https://github.com/daphnied">Daphnie Donnell</a></p>
