--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/hoffmanjoshua">hoffmanjoshua</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/caledeito">Claudio Valente</a></p>
+			  <p><i class="fa fa-user"></i> <a href="https://github.com/xVanjaZ">xVanjaZ</a></p>
+
         <p><i class="fa fa-user"></i> <a href="https://github.com/daphnied">Daphnie Donnell</a></p>
         <p><i class="fa fa-user"></i> <a href="https://github.com/MattLawsonn">Matt Lawson</a></p>
         
