--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 <link rel="stylesheet" href="https://cdn.flareco.net/bootswatch/superhero/bootstrap.css"/>
 <link rel="stylesheet" href="https://cdn.flareco.net/font-awesome/css/font-awesome.css"/>
 </head>
-<style>
-.ophosting {
-  position:absolute;
-  bottom:0;
-  right:0;
-}
-</style>
+<link rel="stylesheet" href="./css/style.css">
 <body>
-<a href="https://www.ophosting.io" class="ophosting"><img src="https://www.ophosting.io/img/newLogo.png"></a>
+<!-- <a href="https://www.ophosting.io" class="ophosting"><img src="https://www.ophosting.io/img/newLogo.png"></a> -->
 <div class="container-fluid">
 <div class="row">
 	<center>
-		<p class="alert alert-success"><h2>Hacktober List 2017</h2></p>
+		<p class="alert alert-success">
+			<h2>Hacktober List 2017</h2>
+		</p>
 	</center>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel panel-heading"><center>List #1</center></div>
+			<div class="panel panel-heading"><center>Users #1</center></div>
 			<div class="panel panel-body">
 			  <!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 			  <!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
@@ -56,11 +52,12 @@
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel panel-heading"><center>List #2</center></div>
+			<div class="panel panel-heading"><center>Users #2</center></div>
 			<div class="panel panel-body">
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
+				<p><i class="fa fa-user"></i> <a href="https://github.com/darkxangel84">darkxangel84</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/Amykw105">Amykw105</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/jameskingdom">James Kingdom</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/k4vglitcher">k4vglitcher</a></p>
@@ -76,7 +73,7 @@
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel panel-heading"><center>List #3</center></div>
+			<div class="panel panel-heading"><center>Users #3</center></div>
 			<div class="panel panel-body">
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
