--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         			<p><i class="fa fa-user"></i> <a href="https://github.com/antonioyee">Antonio Yee</a></p> 
 				<p><i class="fa fa-user"></i> <a href="https://github.com/brandonbrewer93">Brandon Brewer</a></p>
         			<p><i class="fa fa-user"></i> <a href="https://github.com/2Hallzy">Hallzy</a></p>
+        		<p><i class="fa fa-user"></i> <a href="https://github.com/RiKap">RiKap</a></p>
         
 			</div>
 			<div class="panel panel-footer">
