terry dinhairs added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<div class="panel panel-primary">
 			<div class="panel panel-heading"><center>Users #3</center></div>
 			<div class="panel panel-body">
-				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
+				<p><i class="fa fa-user"></i> <a href="https://github.com/tedinh">Terry Dinh</a></p>
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 
