--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         			<p><i class="fa fa-user"></i> <a href="https://github.com/antonioyee">Antonio Yee</a></p> 
 				<p><i class="fa fa-user"></i> <a href="https://github.com/brandonbrewer93">Brandon Brewer</a></p>
         			<p><i class="fa fa-user"></i> <a href="https://github.com/2Hallzy">Hallzy</a></p>
-        		<p><i class="fa fa-user"></i> <a href="https://github.com/RiKap">RiKap</a></p>
+        			<p><i class="fa fa-user"></i> <a href="https://github.com/RiKap">RiKap</a></p>
+				<p><i class="fa fa-user"></i> <a href="https://github.com/ksklee">Lee Ka Shun Katherine</a></p>
         
 			</div>
 			<div class="panel panel-footer">
