--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/ayushkalani">Ayush Kalani</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/caledeito">Claudio Valente</a></p>
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/xVanjaZ">xVanjaZ</a></p>
+			  <p><i class="fa fa-user"></i> <a href="https://github.com/kbeflo">kbeflo</a></p>
         <p><i class="fa fa-user"></i> <a href="https://github.com/daphnied">Daphnie Donnell</a></p>
       	<p><i class="fa fa-user"></i> <a href="https://github.com/MattLawsonn">Matt Lawson</a></p>
         
