--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			  <p><i class="fa fa-user"></i> <a href="https://github.com/xVanjaZ">xVanjaZ</a></p>
         <p><i class="fa fa-user"></i> <a href="https://github.com/daphnied">Daphnie Donnell</a></p>
       	<p><i class="fa fa-user"></i> <a href="https://github.com/MattLawsonn">Matt Lawson</a></p>
+	<p><i class="fa fa-user"></i> <a href="https://github.com/sudip39">Sudip Saha</a></p>
         
 			</div>
 			<div class="panel panel-footer">
