--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 				<p><i class="fa fa-user"></i> <a href="https://github.com/fremail">fremail</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/dilum1995">Dilum De Silva</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/codeSmart2307">Raneesh Gomez</a></p>
+				<p><i class="fa fa-user"></i> <a href="https://github.com/s3xi">s3xi</a></p>
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 
