--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 				<p><i class="fa fa-user"></i> <a href="https://github.com/k4vglitcher">k4vglitcher</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/jonatasfalves">Jonatas Alves</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/ClearedFram3">ClearedFram3</a></p>
+				<p><i class="fa fa-user"></i> <a href="https://github.com/talissaneves">talissaneves</a></p>
        	        <p><i class="fa fa-user"></i> <a href="https://github.com/TheKage">TheKage</a></p
       	        <p><i class="fa fa-user"></i> <a href="https://github.com/antonioyee">Antonio Yee</a></p> 
 				<p><i class="fa fa-user"></i> <a href="https://github.com/brandonbrewer93">Brandon Brewer</a></p>
