add name to index.html and contributing.md

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 				<p><i class="fa fa-user"></i> <a href="https://github.com/codeSmart2307">Raneesh Gomez</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/s3xi">s3xi</a></p>
 				<p><i class="fa fa-user"></i> <a href="https://github.com/hanapotski">hanapotski</a></p>
+				<p><i class="fa fa-user"></i> <a href="https://github.com/julicheng">Juli Cheng</a></p>
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 				<!---- FORMAT: <p><i class="fa fa-user"></i> <a href="Link to your GitHub or Heroku Website">USERNAME</a></p> ---->
 
